fix: height display error on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -19,12 +19,12 @@ a:hover {
 
 body {
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
 }
 
 #app {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 @media (prefers-color-scheme: light) {
